Fixed display on mobile devices.
Fixed image overflowing on mobile devices.

--- a/static/styles/default.css
+++ b/static/styles/default.css
@@ -1,3 +1,8 @@
+.navbar {
+    background: black;
+    opacity: 0.8;
+}
+
 #entryArea {
     max-width: 500px; 
     margin: 0 auto;
@@ -29,7 +34,8 @@
 }
 
 #botImage {
-    max-width: 400px;
+    max-width: 100%;
+    width: 400px;
 }
 
 #content {
